# cherine-special-website

./: manage.py  pyproject.toml  readme.md
api/: serializers.py  urls.py  views.py
cherine_special/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: base.html  test.html
frontend/static/css/: style.css
frontend/static/js/: script.js
product/: models.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_product_chinese_full_name_product_chinese_name.py  0003_product_meat_product_type_and_more.py  0004_alter_product_meat_alter_product_type.py  0005_alter_product_chinese_full_name_and_more.py
